--- a/sns/pom.xml
+++ b/sns/pom.xml
@@ -109,7 +109,18 @@
         	<artifactId>commons-dbcp</artifactId>
         	<version>1.4</version>
         </dependency>
-        
+        <!-- 스프링에서 파일 업로드하기(병규) commons-io 라이브러리 추가 -->
+        <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.6</version>
+        </dependency>
+        <!-- 스프링에서 파일 업로드하기(병규) commons-fileupload 라이브러리 추가 -->
+        <dependency>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+        <version>1.3.3</version>
+        </dependency>
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
