--- a/sns/src/main/webapp/WEB-INF/web.xml
+++ b/sns/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,20 @@
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
   
+  
+  <filter>
+  <filter-name>MultipartFilter</filter-name>
+  <filter-class>org.springframework.web.multipart.support.MultipartFilter</filter-class>
+  </filter>
+  
+  <filter-mapping>
+  <filter-name>MultipartFilter</filter-name>
+  <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+
+
+  
   <servlet>
     <servlet-name>appServlet</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -42,8 +56,9 @@
     </init-param>
     <!-- <load-on-startup>1</load-on-startup> -->
     
+    <!-- 업로드 경로 통일 (upload로 - 병규 수정)-->
     <multipart-config>
-    	<location>C:\\upload\\temp</location>
+    	<location>C:/upload</location>
     	<max-file-size>20971520</max-file-size> <!-- 1MB * 20 -->
     	<max-request-size>41943040</max-request-size> <!-- 40MB -->
     	<file-size-threshold>20971520</file-size-threshold> <!-- 20MB -->
